<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/margin_20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="50dp">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin_15dp"
            android:src="@drawable/logo" />
    </androidx.cardview.widget.CardView>

    <com.example.grocerymanagement.customfonts.MyTextViewOleoScriptBold
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/text_register"
        android:textColor="@color/colorPrimary"
        android:textSize="35sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/fullName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:color/transparent"
            android:digits="abcdefghijklmnopqrstuvwxyz . ABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/text_full_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/yellow"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/yellow" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/userEmailId"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/yellow"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/yellow" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp">

        <EditText
            android:id="@+id/mobileNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:digits="0123456789"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/text_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/yellow"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/yellow" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@android:color/transparent"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/text_color"
            android:textColorHint="@color/yellow"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2px"
        android:background="@color/yellow" />

    <com.example.grocerymanagement.customfonts.MyTextViewSansRegular
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:paddingStart="@dimen/margin_20dp"
        android:paddingEnd="@dimen/margin_20dp"
        android:text="@string/text_role"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_12sp" />

    <Spinner
        android:id="@+id/spn_category"
        style="@style/CustomEditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-10dp"
        android:hint="@string/text_product_category" />

    <include layout="@layout/layout_bottom_line_yellow_color" />

    <CheckBox
        android:id="@+id/terms_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/text_term_and_condition"
        android:textColor="@color/text_color"
        android:textSize="14sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUpBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/loginbutton_selector"
        android:padding="3dp"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:textStyle="bold" />

    <com.example.grocerymanagement.customfonts.MyTextView
        android:id="@+id/already_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/text_aldready_account"
        android:textColor="@color/yellow"
        android:textSize="15sp" />

</LinearLayout>