<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2">

    <!-- Include Custom Header Layout -->
    <include
        android:id="@+id/layout_header"
        layout="@layout/layout_header_detail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/action_buttons"
        app:layout_constraintTop_toBottomOf="@id/layout_header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:background="#ffffff"
            android:elevation="2dp"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Product Information -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="Add New Product"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Product Name"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_description"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Product Description"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_product_price"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_product_quantity"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />


            <com.example.grocerymanagement.customfonts.MyTextViewSansRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_category"
                android:paddingStart="@dimen/margin_20dp"
                android:paddingEnd="@dimen/margin_20dp"
                android:textSize="@dimen/text_size_12sp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spn_category"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:hint="@string/text_product_category" />

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_barcode"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_product_barcode"
                    android:inputType="number" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <ImageView
                android:id="@+id/img_product"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ccc"
                android:maxHeight="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@+id/choose_image_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_image"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/text_product_image_url"
                    android:inputType="textUri" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10dp">

                <EditText
                    android:id="@+id/edit_product_weight"
                    style="@style/CustomEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_product_weight"
                    android:inputType="numberDecimal" />
            </com.google.android.material.textfield.TextInputLayout>

            <include layout="@layout/layout_bottom_line_yellow_color" />

            <com.example.grocerymanagement.customfonts.MyTextViewSansRegular
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_sales"
                android:paddingStart="@dimen/margin_20dp"
                android:paddingEnd="@dimen/margin_20dp"
                android:textSize="@dimen/text_size_12sp"
                android:layout_marginTop="@dimen/margin_20dp"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spn_sale"
                style="@style/CustomEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10dp"
                android:hint="@string/text_product_category" />

            <include layout="@layout/layout_bottom_line_yellow_color" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <!-- Action Buttons -->
    <LinearLayout
        android:id="@+id/action_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/text_save"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/text_cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
